# Primordium

./: Cargo.toml  README.md
docs/: architecture.md  spec.md
src/: config.rs  main.rs
src/render/: color.rs  mod.rs
src/sim/: actions.rs  cell.rs  diffusion.rs  energy.rs  genome.rs  mod.rs  phase.rs  spawner.rs  tick.rs  world.rs
